Closed Bug 1122678 Opened 9 years ago Closed 9 years ago

HTMLMediaElement::SetMozSrcObject does not handle nullptr correctly

Categories

(Core :: Audio/Video, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla38

People

(Reporter: bwc, Assigned: bwc)

Details

Attachments

(1 file)

Binding code (specifically, |set_mozSrcObject| in HTMLMediaElementBinding.cpp) can pass nullptr to |HTMLMediaElement::SetMozSrcObject|, but this function converts the nullptr to a reference.
Assignee: nobody → docfaraday
Status: NEW → ASSIGNED
Comment on attachment 8550439 [details] [diff] [review]
Fix behavior of SetMozSrcObject when passed a nullptr

Review of attachment 8550439 [details] [diff] [review]:
-----------------------------------------------------------------

try:

https://treeherder.mozilla.org/#/jobs?repo=try&revision=d325dbabf1ec
Attachment #8550439 - Flags: review?(roc)
Attachment #8550439 - Flags: review?(roc) → review?(tterribe)
Attachment #8550439 - Flags: review?(tterribe) → review+
https://hg.mozilla.org/mozilla-central/rev/bafb17acfd5c
Status: ASSIGNED → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla38
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: