Bug 1122678: Fix behavior of SetMozSrcObject when passed a nullptr. r=derf